[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
rand = "0.9.0"
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
